--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,13 @@
         <activity
             android:name=".DetectorActivity"
             android:label="@string/tfe_od_app_name"
+            android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".DetectorPictureActivity"
+            android:label="@string/tfe_od_app_name"
             android:screenOrientation="portrait">
+
         </activity>
 
         <activity android:name=".MainActivity">
