--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,14 @@
 buildscript {
     
     repositories {
-        google()
+        google() // Google's maven repository
         jcenter()
         mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
         classpath 'de.undercouch:gradle-download-task:3.4.3'
-
+        classpath 'com.google.gms:google-services:4.3.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,7 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+        google() // Google's maven repository
         jcenter()
         mavenLocal()
     }
