Second commit in best branch

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <uses-sdk />
 
-    <uses-permission android:name="android.permission.CAMERA" />
-
-<!--<uses-feature android:name="android.hardware.camera" />-->
+    <uses-permission android:name="android.permission.CAMERA" /> <!-- <uses-feature android:name="android.hardware.camera" /> -->
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -19,6 +17,7 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -26,8 +25,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.ObjectDetection">
-        <activity android:name=".MainActivity1">
-
+        <activity
+            android:name=".MainActivity1">
+            android:theme="@style/Theme.Design.Light.NoActionBar" >
+            <meta-data
+                android:name="com.google.mlkit.vision.DEPENDENCIES"
+                android:value="ocr" />
         </activity>
         <activity
             android:name=".DetectorActivity"
@@ -36,28 +39,25 @@
         <activity
             android:name=".DetectorPictureActivity"
             android:label="@string/tfe_od_app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
             android:theme="@style/Theme.Design.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".login_form"
             android:theme="@style/Theme.Design.Light.NoActionBar" />
-
         <activity
             android:name=".AddReadings"
             android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
-            android:name=".MainActivity" android:theme="@style/Theme.Design.Light.NoActionBar">
-            <meta-data
-                android:name="com.google.mlkit.vision.DEPENDENCIES"
-                android:value="ocr" />
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" >
         </activity>
     </application>
 
