--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 //    implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
     //implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
 
 
     //androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -81,5 +82,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'androidx.cardview:cardview:.0.0'
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation "androidx.annotation:annotation:1.1.0"
 
 }
