--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     //implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'org.jetbrains:annotations:15.0'
 
 
     //androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -87,5 +88,12 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation "androidx.annotation:annotation:1.1.0"
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    //image crop library
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+    //image to text library
+    implementation 'com.google.android.gms:play-services-vision:16.2.0'
 
 }
