--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,18 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/tfe_od_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.ObjectDetection"
-        android:allowBackup="true">
-
-        <activity android:name=".MainActivity3"
-            android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
-
-        <!--add in application tag-->
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Theme.ImageToTextAppByN"/>
+        android:theme="@style/AppTheme.ObjectDetection">
+        <activity
+            android:name=".MainActivity3"
+            android:theme="@style/Theme.Design.Light.NoActionBar" /> <!-- add in application tag -->
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Theme.ImageToTextAppByN" />
         <activity
             android:name=".OfflineActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar">
